--- a/views/index.html
+++ b/views/index.html
@@ -27,7 +27,7 @@
             padding-top: 3rem;
             padding-bottom: 2rem;
         }
-        	
+		
 		.extra-margins {
             margin-top: 1rem;
             margin-bottom: 2.5rem;
@@ -54,7 +54,7 @@
 
 </head>
 
-<body>
+<body background = "./images/backdrop.jpg">
 
 
     <header>
@@ -129,7 +129,7 @@
 
                         <!--Card image-->
                         <div class="view overlay hm-white-slight">
-                            <img src="http://mdbootstrap.com/img/Photos/Horizontal/Architecture/4-col/img%20(3).jpg" class="img-fluid" alt="">
+                            <img src= "./images/pic001.jpg">
                             <a href="#">
                                 <div class="mask"></div>
                             </a>
@@ -158,7 +158,7 @@
 
                         <!--Card image-->
                         <div class="view overlay hm-white-slight">
-                            <img src="http://mdbootstrap.com/img/Photos/Horizontal/Architecture/4-col/img%20(1).jpg" class="img-fluid" alt="">
+                            <img src= "./images/pic002.jpeg">
                             <a href="#">
                                 <div class="mask"></div>
                             </a>
@@ -187,7 +187,7 @@
 
                         <!--Card image-->
                         <div class="view overlay hm-white-slight">
-                            <img src="http://mdbootstrap.com/img/Photos/Horizontal/Architecture/4-col/img%20(4).jpg" class="img-fluid" alt="">
+                            <img src= "./images/pic003.jpeg">
                             <a href="#">
                                 <div class="mask"></div>
                             </a>
