Added 'About' page/Nav btn

--- a/views/index.html
+++ b/views/index.html
@@ -55,8 +55,6 @@
 </head>
 
 <body background = "./images/backdrop.jpg">
-
-
     <header>
 
         <!--Navbar-->
@@ -74,7 +72,7 @@
                             <a class="nav-link">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link">Features</a>
+                            <a href="about.html"class="nav-link">About</a>              <!--Created the About page link-->
                         </li>
                         <li class="nav-item">
                             <a class="nav-link">Pricing</a>
