Updates to Contact Form
Updated

--- a/views/index.html
+++ b/views/index.html
@@ -120,7 +120,7 @@
 							<div class="modal-content">
 								<div class="modal-header">
 								<span class="close">&times;</span>
-								<h2>Modal Header</h2>
+								<h2>Sign Up</h2>
 							</div>
 							<div class="modal-body">
 								<form action="/action_page.php">
@@ -138,14 +138,14 @@
 									<p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
 
 									<div class="clearfix">
-									<button type="button"  class="cancelbtn">Cancel</button>
+									<button id="cancelbtn">Cancel</button>
 									<button type="submit" class="signupbtn">Sign Up</button>
 								</div>
 							</div>
 							</form>
 							</div>
 							<div class="modal-footer">
-								<h3>Modal Footer</h3>
+								<h3>Sign Up</h3>
 							</div>
 							</div>
 							
