--- a/views/index.html
+++ b/views/index.html
@@ -19,39 +19,8 @@
     <!-- Material Design Bootstrap -->
     <link href="css/mdb.min.css" rel="stylesheet">
 
-    <!-- Template styles -->
-    <style rel="stylesheet">
-        /* TEMPLATE STYLES */
-        
-        main {
-            padding-top: 3rem;
-            padding-bottom: 2rem;
-        }
-		
-		.extra-margins {
-            margin-top: 1rem;
-            margin-bottom: 2.5rem;
-        }
-        
-        .jumbotron {
-            text-align: center;
-            
-               }
-          
-        .navbar {
-            background-color: #3b295a;
-        }
-        
-        footer.page-footer {
-            background-color: #3b295a;
-            margin-top: 2rem;
-        }
-        
-		*{
-		font-family:Lorem Ipsum;
-		}
-    </style>
-	 <link href="css/style.css" rel="stylesheet">
+	<link href="css/style.css" rel="stylesheet">
+
 </head>
 
 <body background = "./images/backdrop.jpg">
@@ -104,14 +73,14 @@
             <div class="row wow fadeIn" data-wow-delay="0.2s">
                 <div class="col-md-12">
                     <div class="jumbotron">
-                        <h2 class="h2-responsive">Live Project 3</h2>
+                        <h1 class="h1-responsive">Live Project 3</h1>
                         <br>
                         <p>Under Construction</p>
                         <hr>
-                        <p>Sign up for our Email Newsletter:</p>
+                        <p>Sign the Guestbook for our Email Newsletter:</p>
                         <!--<a target="_blank"  href="http://google.com/" class="btn btn-mdb btn-stc" rel="nofollow">Sign-Up <i class="fa fa-book right"></i></a>-->
 						<!--MODAL FOR USERNAME, ID-->
-						<button id="myBtn">Sign-Up</button>
+						<button id="myBtn"class="fa fa-book right">&nbsp Sign-Up</button>
 						
 						<!-- The Modal -->
 						<div id="myModal" class="modal">
@@ -228,7 +197,7 @@
 
                         <!--Card image-->
                         <div class="view overlay hm-white-slight">
-                            <img src= "./images/pic003.jpeg">
+                            <img src= "./images/pic003.jpg">
                             <a href="#">
                                 <div class="mask"></div>
                             </a>
