--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>Material Design Bootstrap</title>
+    <title>Live Project 3</title>
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
@@ -75,10 +75,11 @@
                     <div class="jumbotron">
                         <h1 class="h1-responsive">Live Project 3</h1>
                         <br>
-                        <p>Under Construction</p>
+                        <h2>Under Construction</h2>
                         <hr>
-                        <p>Sign the Guestbook for our Email Newsletter:</p>
-                        <!--<a target="_blank"  href="http://google.com/" class="btn btn-mdb btn-stc" rel="nofollow">Sign-Up <i class="fa fa-book right"></i></a>-->
+                        <h2>Sign the Guestbook for our Email Newsletter:</h2>
+                        <hr>
+						<!--<a target="_blank"  href="http://google.com/" class="btn btn-mdb btn-stc" rel="nofollow">Sign-Up <i class="fa fa-book right"></i></a>-->
 						<!--MODAL FOR USERNAME, ID-->
 						<button id="myBtn"class="fa fa-book right">&nbsp Sign-Up</button>
 						
@@ -95,16 +96,16 @@
 								<form action="/action_page.php">
 								<!-- SIGNUP FORM------------------->
 								<div class="container">
-									<label><b>Email</b></label>
+									<label><b><!--Email--></b></label>
 									<input type="text" placeholder="Enter Email" name="email" required>
 
-									<label><b>Password</b></label>
+									<label><b><!--Password--></b></label>
 									<input type="password" placeholder="Enter Password" name="psw" required>
 
-									<label><b>Repeat Password</b></label>
+									<label><b><!--Repeat Password--></b></label>
 									<input type="password" placeholder="Repeat Password" name="psw-repeat" required>
 									<input type="checkbox" checked="checked"> Remember me
-									<p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
+									<a href="#">&nbsp Terms & Privacy</a>
 
 									<div class="clearfix">
 									<button id="cancelbtn">Cancel</button>
@@ -114,7 +115,7 @@
 							</form>
 							</div>
 							<div class="modal-footer">
-								<h3>Sign Up</h3>
+								<h3><!--Sign Up--></h3>
 							</div>
 							</div>
 							
@@ -234,10 +235,10 @@
 
                 <!--First column-->
                 <div class="col-lg-3 offset-lg-1 hidden-lg-down">
-                    <h5 class="title">ABOUT MATERIAL DESIGN</h5>
-                    <p>Material Design (codenamed Quantum Paper) is a design language developed by Google. </p>
+                    <h5 class="title">LIVE PROJECT 3 Etc.</h5>
+                    <h6></h6>
 
-                    <p>Material Design for Bootstrap (MDB) is a powerful Material Design UI KIT for most popular HTML, CSS, and JS framework - Bootstrap.</p>
+                    <h6></h6>
                 </div>
                 <!--/.First column-->
 
@@ -288,18 +289,6 @@
         <!--/.Footer Links-->
 
         <hr>
-
-        <!--Call to action-->
-        <div class="call-to-action">
-            <h4>Material Design for Bootstrap</h4>
-            <ul>
-                <li>
-                    <h5>Get our UI KIT for free</h5></li>
-                <li><a target="_blank" href="http://mdbootstrap.com/getting-started/" class="btn btn-primary" rel="nofollow">Sign up!</a></li>
-                <li><a target="_blank" href="http://mdbootstrap.com/material-design-for-bootstrap/" class="btn btn-default" rel="nofollow">Learn more</a></li>
-            </ul>
-        </div>
-        <!--/.Call to action-->
 
         <!--Copyright-->
         <div class="footer-copyright">
