--- a/views/about.html
+++ b/views/about.html
@@ -1,6 +1,81 @@
 <html>
-<header><title>About</title></header>
-<body>
+
+<head>
+<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+
+    <title>Live Project 3</title>
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
+
+    <!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Material Design Bootstrap -->
+    <link href="css/mdb.min.css" rel="stylesheet">
+
+	<link href="css/style.css" rel="stylesheet">
+	
+	<% include ../views/header.html %>
+</head>
+
+<body background = "./images/backdrop.jpg">
+    <header>
+
+    </header>
 About Live Project 3...
+
+
+
+
+
+
+
+ </div>
+        <!--/.Footer Links-->
+
+        <hr>
+
+        <!--Copyright-->
+        <div class="footer-copyright">
+            <div class="container-fluid">
+                <!--Copyright © 2017 Auto Thematic.com-->
+			<script language="JavaScript">
+				document.write('Copyright &copy; &nbsp' );
+				
+				document.write(new Date().getFullYear());
+				
+				document.write(' &nbspAuto Thematic.com');
+			</script>
+            </div>
+        </div>
+        <!--/.Copyright-->
+
+    </footer>
+    <!--/.Footer-->
+
+
+    <!-- SCRIPTS -->
+
+    <!-- JQuery -->
+    <script type="text/javascript" src="js/jquery-2.2.3.min.js"></script>
+
+    <!-- Bootstrap tooltips -->
+    <script type="text/javascript" src="js/tether.min.js"></script>
+
+    <!-- Bootstrap core JavaScript -->
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+
+    <!-- MDB core JavaScript -->
+    <script type="text/javascript" src="js/mdb.min.js"></script>
+	
+	  <!-- Reis' New JS File -->
+    <script type="text/javascript" src="js/additionaljs.js"></script>
+
+    <script>
+    new WOW().init();
+    </script>
 </body>
 </html>
