--- a/views/contact.html
+++ b/views/contact.html
@@ -1,3 +1,4 @@
+
 <html>
 
 <head>
@@ -25,16 +26,16 @@
     <header>
 
     </header>
-<br>
-About Live Project 3...
-<br>
-Some quick example text to build on the card title and make up the bulk of the card's content.
+
+<!--<form enctype="text/plain" method="get" action="mailto:liveproject3@gmail.com">
+Your First Name: <input type="text" name="first_name"><br>
+Your Last Name: <input type="text" name="last_name"><br>
+Comments: <textarea rows="5" cols="30" name="comments"></textarea>
+<input type="submit" value="Send">
+</form>-->
 
 
-
-
-
- </div>
+</div>
         <!--/.Footer Links-->
 
         <hr>
@@ -42,7 +43,7 @@ Some quick example text to build on the card title and make up the bulk of the c
         <!--Copyright-->
         <div class="footer-copyright">
             <div class="container-fluid">
-                <!--Copyright Â© 2017 Auto Thematic.com-->
+                <!--Copyright © 2017 Auto Thematic.com-->
 			<script language="JavaScript">
 				document.write('Copyright &copy; &nbsp' );
 				
