--- a/views/header.html
+++ b/views/header.html
@@ -28,21 +28,24 @@
                 <div class="collapse navbar-collapse" id="navbarNav1">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                            <a class="nav-link">Home<span class="sr-only">(current)</span></a>
+                            <a href="index"class="nav-link">Home<span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
                             <a href="about"class="nav-link">About</a>              <!--Created the About page link-->
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link">Pricing</a>
-                        </li>
+                       
                         <li class="nav-item dropdown btn-group">
                             <a class="nav-link dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
                             <div class="dropdown-menu dropdown" aria-labelledby="dropdownMenu1">
                                 <a class="dropdown-item">Action</a>
                                 <a class="dropdown-item">Another action</a>
                                 <a class="dropdown-item">Something else here</a>
-                            </div>
+                            
+						<li class="nav-item">
+                            <a href="mailto:liveproject3@gmail.com"class="nav-link">Contact</a>
+                        </li>
+								
+							</div>
                         </li>
                     </ul>
                     <form class="form-inline waves-effect waves-light">
