--- a/views/index.html
+++ b/views/index.html
@@ -28,47 +28,7 @@
 <body background = "./images/backdrop.jpg">
     <header>
 
-<<<<<<< HEAD
-        <!--Navbar-->
-        <nav class="navbar navbar-toggleable-md navbar-dark">
-            <div class="container">
-                <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav1" aria-controls="navbarNav1" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <a class="navbar-brand" href="#">
-                    <strong>Navbar</strong>
-                </a>
-                <div class="collapse navbar-collapse" id="navbarNav1">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link">Home <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="about.html"class="nav-link">About</a>              <!--Created the About page link-->
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link">Pricing</a>
-                        </li>
-                        <li class="nav-item dropdown btn-group">
-                            <a class="nav-link dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                            <div class="dropdown-menu dropdown" aria-labelledby="dropdownMenu1">
-                                <a class="dropdown-item">Action</a>
-                                <a class="dropdown-item">Another action</a>
-                                <a class="dropdown-item">Something else here</a>
-                            </div>
-                        </li>
-                    </ul>
-                    <form class="form-inline waves-effect waves-light">
-                        <input class="form-control" type="text" placeholder="Search">
-                    </form>
-                </div>
-            </div>
-        </nav>
-	    <!--/.Navbar-->
-}
 
-=======
->>>>>>> origin/master
     </header>
 
     <main>
@@ -99,18 +59,16 @@
 								<h2>Sign Up</h2>
 							</div>
 							<div class="modal-body">
-							<form action="/action_page.php" onsubmit="return mailMe(this.form)">
+							<form action="/Subscriber" method = "post">
 								<!-- SIGNUP FORM------------------->
 								<div class="container">
+								
+									<label><b><!--Name--></b></label>
+									<input type="name" placeholder="Enter Name" name="psw" required>
+								
 									<label><b><!--Email--></b></label>
 									<input type="text" placeholder="Enter Email" name="email" required>
 
-									<label><b><!--Password--></b></label>
-									<input type="password" placeholder="Enter Password" name="psw" required>
-
-									<label><b><!--Repeat Password--></b></label>
-									<input type="password" placeholder="Repeat Password" name="psw-repeat" required>
-									<input type="checkbox" checked="checked"> Remember me
 									<a href="#">&nbsp Terms & Privacy</a>
 
 									<div class="clearfix">
