--- a/views/index.html
+++ b/views/index.html
@@ -62,13 +62,10 @@
 							<form action="/Subscriber" method = "post">
 								<!-- SIGNUP FORM------------------->
 								<div class="container">
-								
-									<label><b><!--Name--></b></label>
-									<input type="name" placeholder="Enter Name" name="psw" required>
-								
+								    <label><b><!--Name--></b></label>
+									<input type="text" placeholder="Enter Name" name="psw" required>
 									<label><b><!--Email--></b></label>
 									<input type="text" placeholder="Enter Email" name="email" required>
-
 									<a href="#">&nbsp Terms & Privacy</a>
 
 									<div class="clearfix">
