--- a/views/index.html
+++ b/views/index.html
@@ -66,7 +66,7 @@
 									<input type="text" placeholder="Enter Name" name="psw" required>
 									<label><b><!--Email--></b></label>
 									<input type="text" placeholder="Enter Email" name="email" required>
-									<a href="#">&nbsp Terms & Privacy</a>
+									<a href="http://www.youtube.com/embed/dQw4w9WgXcQ">&nbsp Terms & Privacy</a>
 
 									<div class="clearfix">
 									<button id="cancelbtn">Cancel</button>
