End of 4/11, changes to Routes and minor index change.

--- a/views/index.html
+++ b/views/index.html
@@ -63,7 +63,7 @@
 								<!-- SIGNUP FORM------------------->
 								<div class="container">
 								    <label><b><!--Name--></b></label>
-									<input type="text" placeholder="Enter Name" name="psw" required>
+									<input type="text" placeholder="Enter Name" name="userName" required>
 									<label><b><!--Email--></b></label>
 									<input type="text" placeholder="Enter Email" name="email" required>
 									<a href="http://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1">&nbsp Terms & Privacy</a>
