Routes, Index update

--- a/views/index.html
+++ b/views/index.html
@@ -63,9 +63,9 @@
 								<!-- SIGNUP FORM------------------->
 								<div class="container">
 								    <label><b><!--Name--></b></label>
-									<input type="text" placeholder="Enter Name" name="userName" required>
+									<input type="text" placeholder="Enter Name" name="Name" required>
 									<label><b><!--Email--></b></label>
-									<input type="text" placeholder="Enter Email" name="email" required>
+									<input type="text" placeholder="Enter Email" name="Email" required>
 									<a href="http://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1">&nbsp Terms & Privacy</a>
 
 									<div class="clearfix">
