--- a/views/index.html
+++ b/views/index.html
@@ -281,6 +281,9 @@
 	  <!-- Reis' New JS File -->
     <script type="text/javascript" src="js/additionaljs.js"></script>
 
+	  <!-- David added passport.js -->
+	<script type="text/javascript" src="js/passport.js"></script>
+	
     <script>
     new WOW().init();
     </script>
