--- a/views/index.html
+++ b/views/index.html
@@ -61,28 +61,22 @@
 							<div class="modal-body">
 							<form action="/Subscriber" method = "post">
 								<!-- SIGNUP FORM------------------->
+								
 								<div class="container">
-								    <div class="container">
 								    <label><b><!--Name--></b></label>
-									<input type="text" placeholder="Enter Name" name="Name" required>
+									<input type="text" placeholder="Enter Name" name="userName" required>
 									<label><b><!--Email--></b></label>
-									<input type="text" placeholder="Enter Email" name="Email" required>
+									<input type="text" placeholder="Enter Email" name="email" required>
 									<a href="http://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1">&nbsp Terms & Privacy</a>
 
 									<div class="clearfix">
 									<button id="cancelbtn">Cancel</button>
 									<button type="submit" class="signupbtn">Sign Up</button>
-									</div>
-<<<<<<< HEAD
 								</div>
-<<<<<<< HEAD
-								</div>
+
+
 							</div>
-=======
->>>>>>> origin/master
-=======
-								</div>
->>>>>>> origin/master
+
 							</form>
 							</div>
 							<div class="modal-footer">
